feat: 将视觉能力迁移至 C++ 实现
保留 matcher 模块作为 Java 视觉方案的 MVP 实现，待稳定后再转译为 C++。此举解决了 JavaCPP 自动申请内存所导致的 5G 内存占用问题。